tests/negative/gold/incomplete_comments2_test.gold
tests/negative/incomplete_comments2_test.toit:4:3: error: Unterminated multi-line comment
  /*/*
  ^~~~
Compilation failed.
